fix: should also mark style.property to important, close #193 (#201)

--- a/test/processor/__snapshots__/interpret.test.ts.yml
+++ b/test/processor/__snapshots__/interpret.test.ts.yml
@@ -38,6 +38,27 @@ Tools / interpret / success / 0: |-
     "bg-cool-gray-300",
     "bg-hex-fff"
   ]
+Tools / interpret duplicated important / duplicated important / 0: |-
+  .\!hover\:bg-red-500:hover {
+    --tw-bg-opacity: 1 !important;
+    background-color: rgba(239, 68, 68, var(--tw-bg-opacity)) !important;
+  }
+  .\!focus\:border:focus {
+    border-width: 1px !important;
+  }
+  .focus\:float-right:focus {
+    float: right;
+  }
+  .\!p-0 {
+    padding: 0px !important;
+  }
+  .\!hover\:p-4:hover {
+    padding: 1rem !important;
+  }
+  .\!text-green-300 {
+    --tw-text-opacity: 1 !important;
+    color: rgba(110, 231, 183, var(--tw-text-opacity)) !important;
+  }
 Tools / interpret important / important / 0: |-
   .\!hover\:bg-red-500:hover {
     --tw-bg-opacity: 1 !important;
