--- a/test/processor/__snapshots__/interpret.test.ts.yml
+++ b/test/processor/__snapshots__/interpret.test.ts.yml
@@ -1,3 +1,12 @@
+Tools / generated correct css for space-x-reverse / css / 0: |-
+  .space-y-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+  }
+  .space-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 1;
+  }
 Tools / interpret / css / 1: |-
   .bg-cool-gray-300 {
     --tw-bg-opacity: 1;
