--- a/test/processor/__snapshots__/interpret.test.ts.yml
+++ b/test/processor/__snapshots__/interpret.test.ts.yml
@@ -106,12 +106,24 @@ Tools / interpret screen variants / screen variants / 0: |-
     }
   }
 Tools / interpret square brackets / square brackets / 0: |-
+  .bg-\[\#234\] {
+    --tw-bg-opacity: 1;
+    background-color: rgba(34, 51, 68, var(--tw-bg-opacity));
+  }
   .border-\[\#232\] {
     --tw-border-opacity: 1;
     border-color: rgba(34, 51, 34, var(--tw-border-opacity));
   }
+  .border-l-\[\#342\] {
+    --tw-border-opacity: 1;
+    border-color: rgba(51, 68, 34, var(--tw-border-opacity));
+  }
   .border-\[2px\] {
     border-width: 2px;
+  }
+  .text-\[1\.5rem\] {
+    font-size: 1.5rem;
+    line-height: 1;
   }
   .m-\[-11rem\] {
     margin: -11rem;
@@ -122,10 +134,46 @@ Tools / interpret square brackets / square brackets / 0: |-
   .p-\[30em\] {
     padding: 30em;
   }
+  .ring-\[4px\] {
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    -webkit-box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  }
+  .ring-\[\#34123250\] {
+    --tw-ring-opacity: 0.3137254901960784;
+    --tw-ring-color: rgba(52, 18, 50, var(--tw-ring-opacity));
+  }
   .text-\[\#9254d2\] {
     --tw-text-opacity: 1;
     color: rgba(146, 84, 210, var(--tw-text-opacity));
   }
+  .text-\[rgb\(123\2c 123\2c 23\)\] {
+    --tw-text-opacity: 1;
+    color: rgba(123, 123, 23, var(--tw-text-opacity));
+  }
+  .text-\[rgba\(132\2c 2\2c 193\2c 0\.5\)\] {
+    --tw-text-opacity: 0.5;
+    color: rgba(132, 2, 193, var(--tw-text-opacity));
+  }
+  .text-\[hsl\(360\2c \ 100\%\2c \ 50\%\)\] {
+    --tw-text-opacity: 1;
+    color: rgba(255, 0, 0, var(--tw-text-opacity));
+  }
   .w-\[51vw\] {
     width: 51vw;
+  }
+  .gap-\[4rem\] {
+    grid-gap: 4rem;
+    gap: 4rem;
+  }
+Tools / interpret square brackets grid / square brackets grids / 0: |-
+  .grid-cols-\[1fr\2c 700px\2c 2fr\] {
+    grid-template-columns: 1fr 700px 2fr;
+  }
+  .grid-cols-\[auto\] {
+    grid-template-columns: auto;
+  }
+  .grid-rows-\[auto\2c max-content\2c 10px\] {
+    grid-template-rows: auto max-content 10px;
   }
