fix: dashify, close #218 (#235)

--- a/test/processor/__snapshots__/config.test.ts.yml
+++ b/test/processor/__snapshots__/config.test.ts.yml
@@ -117,7 +117,7 @@ Tools / dashify / css / 0: |-
     --tw-bg-opacity: 1;
   }
   .bar {
-    tw-bg-opacity: 1;
+    -moz-user-select: 1;
   }
   .caps {
     test-css: 1;
