--- a/test/interface/__snapshots__/plugin.test.ts.yml
+++ b/test/interface/__snapshots__/plugin.test.ts.yml
@@ -1,3 +1,9 @@
+Tools / addComponents nested selectors / css / 0: |-
+  .card.compact .card-body {
+    font-size: .875rem;
+    line-height: 1.25rem;
+    padding: 1rem;
+  }
 Tools / addComponents with attribute selectors / css / 0: |-
   btn-disabled, .btn[disabled] {
     --tw-bg-opacity: 1;
