add lang eval and parse

--- a/test/parser/__snapshots__/css.test.ts.yml
+++ b/test/parser/__snapshots__/css.test.ts.yml
@@ -346,3 +346,8 @@ Tools / theme function / css / 0: |-
   .content-area2 {
     height: calc(100vh - 4rem);
   }
+Tools / variables / css / 0: |-
+  body {
+    font: 100% $font-stack;
+    color: $primary-color;
+  }
