--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "jasmine": "^3.7.0",
     "jasmine-spec-reporter": "^6.0.0",
     "js-yaml": "^4.0.0",
+    "jsep": "^0.4.0",
     "mini-svg-data-uri": "^1.2.3",
     "nyc": "^15.1.0",
     "pirates": "^4.0.1",
