--- a/test/processor/__snapshots__/attributify.test.ts.yml
+++ b/test/processor/__snapshots__/attributify.test.ts.yml
@@ -1,4 +1,50 @@
-Tools / attributify / css / 0: |-
+Tools / mix utility and variant / css / 0: |-
+  [p~="x-4"] {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  [p~="y-2"] {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+  @media (min-width: 640px) {
+    [sm~="bg-red-500"] {
+      --tw-bg-opacity: 1;
+      background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
+    }
+    [sm~="hover:bg-green-300"]:hover {
+      --tw-bg-opacity: 1;
+      background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
+    }
+    [sm\:hover~="focus:bg-white"]:hover:focus {
+      --tw-bg-opacity: 1;
+      background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+    }
+    [sm~="bg-opacity-50"] {
+      --tw-bg-opacity: 0.5;
+    }
+    [sm\:hover~="text-lg"]:hover {
+      font-size: 1.125rem;
+      line-height: 1.75rem;
+    }
+    [sm\:hover~="text-red-500"]:hover {
+      --tw-text-opacity: 1;
+      color: rgba(239, 68, 68, var(--tw-text-opacity));
+    }
+  }
+  @media (min-width: 768px) {
+    [p~="md:x-2"] {
+      padding-left: 0.5rem;
+      padding-right: 0.5rem;
+    }
+  }
+  @media (min-width: 1024px) {
+    [p~="lg:hover:x-8"]:hover {
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
+  }
+Tools / simple attributify / css / 0: |-
   [bg~="green-400"] {
     --tw-bg-opacity: 1;
     background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
@@ -9,10 +55,6 @@ Tools / attributify / css / 0: |-
   [font="bold"] {
     font-weight: 700;
   }
-  [hover\:text~="lg"]:hover {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
   [p~="x-4"] {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -21,7 +63,72 @@ Tools / attributify / css / 0: |-
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
   }
+Tools / with variants / css / 0: |-
+  @media (min-width: 640px) {
+    [sm~="bg-red-500"] {
+      --tw-bg-opacity: 1;
+      background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
+    }
+    [sm~="bg-opacity-50"] {
+      --tw-bg-opacity: 0.5;
+    }
+    [sm\:hover~="text-lg"]:hover {
+      font-size: 1.125rem;
+      line-height: 1.75rem;
+    }
+    [sm-hover~="text-lg"]:hover {
+      font-size: 1.125rem;
+      line-height: 1.75rem;
+    }
+    [sm\:hover~="text-red-500"]:hover {
+      --tw-text-opacity: 1;
+      color: rgba(239, 68, 68, var(--tw-text-opacity));
+    }
+    [sm-hover~="text-red-500"]:hover {
+      --tw-text-opacity: 1;
+      color: rgba(239, 68, 68, var(--tw-text-opacity));
+    }
+  }
+Tools / with variants and utility / css / 0: |-
+  [hover-text~="sm"]:hover {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+  [hover\:text~="lg"]:hover {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+  [hover-text~="red-300"]:hover {
+    --tw-text-opacity: 1;
+    color: rgba(252, 165, 165, var(--tw-text-opacity));
+  }
   [hover\:text~="red-500"]:hover {
     --tw-text-opacity: 1;
     color: rgba(239, 68, 68, var(--tw-text-opacity));
+  }
+  @media (min-width: 640px) {
+    [sm\:hover\:text~="lg"]:hover {
+      font-size: 1.125rem;
+      line-height: 1.75rem;
+    }
+    [sm-hover-text~="sm"]:hover {
+      font-size: 0.875rem;
+      line-height: 1.25rem;
+    }
+    [sm\:p~="x-4"] {
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+    [sm\:p~="y-2"] {
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+    }
+    [sm\:hover\:text~="red-500"]:hover {
+      --tw-text-opacity: 1;
+      color: rgba(239, 68, 68, var(--tw-text-opacity));
+    }
+    [sm-hover-text~="red-300"]:hover {
+      --tw-text-opacity: 1;
+      color: rgba(252, 165, 165, var(--tw-text-opacity));
+    }
   }
