add dark/light colors & clean code

--- a/test/plugin/__snapshots__/typography.test.ts.yml
+++ b/test/plugin/__snapshots__/typography.test.ts.yml
@@ -1716,6 +1716,12 @@ Tools / with multi selector / css / 0: |-
   .prose > :last-child {
     margin-bottom: 0;
   }
+  .dark .dark\:prose-dark a {
+    color: #1C1C1E;
+  }
+  .dark .dark\:prose-dark a code {
+    color: #1C1C1E;
+  }
   .dark .dark\:prose-dark h2 > a, .dark .dark\:prose-dark h3 > a {
     color: #1f2937;
     font-weight: inherit;
