--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "windicss",
-  "version": "2.5.14",
+  "version": "3.0.0-beta1",
   "description": "Next generation tailwindcss compiler.",
   "main": "index.js",
   "module": "index.mjs",
