--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -69,6 +69,7 @@ Tools / get corePlugins / list / 0: |-
     "inset",
     "resize",
     "boxShadow",
+    "boxShadowColor",
     "ringWidth",
     "ringOffsetColor",
     "ringOffsetWidth",
@@ -194,6 +195,7 @@ Tools / get corePlugins / list3 / 2: |-
     "inset",
     "resize",
     "boxShadow",
+    "boxShadowColor",
     "ringWidth",
     "ringOffsetColor",
     "ringOffsetWidth",
