--- a/test/processor/__snapshots__/config.test.ts.yml
+++ b/test/processor/__snapshots__/config.test.ts.yml
@@ -71,6 +71,18 @@ Tools / config with brackets / css / 0: |-
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
+Tools / confuses color with font-size if keys are the same / css / 0: |-
+  .text-base {
+    font-size: 125%;
+  }
+  .text-gray {
+    --tw-text-opacity: 1;
+    color: rgba(255, 255, 255, var(--tw-text-opacity));
+  }
+  .text-gray-base {
+    --tw-text-opacity: 1;
+    color: rgba(89, 174, 144, var(--tw-text-opacity));
+  }
 Tools / dashify / css / 0: |-
   .foo {
     --tw-bg-opacity: 1;
