--- a/test/processor/__snapshots__/attributify.test.ts.yml
+++ b/test/processor/__snapshots__/attributify.test.ts.yml
@@ -68,6 +68,88 @@ Tools / simple attributify / css / 0: |-
       padding: 1rem;
     }
   }
+Tools / with grid utility / css / 0: |-
+  [grid~="default"] {
+    display: -ms-grid;
+    display: grid;
+  }
+  [grid~="inline"] {
+    display: -ms-inline-grid;
+    display: inline-grid;
+  }
+  [grid~="gap-2"] {
+    grid-gap: 0.5rem;
+    gap: 0.5rem;
+  }
+  [grid~="gap-x-4"] {
+    -webkit-column-gap: 1rem;
+    -moz-column-gap: 1rem;
+    grid-column-gap: 1rem;
+    column-gap: 1rem;
+  }
+  [grid~="gap-y-2"] {
+    -webkit-row-gap: 0.5rem;
+    -moz-row-gap: 0.5rem;
+    grid-row-gap: 0.5rem;
+    row-gap: 0.5rem;
+  }
+  [grid~="flow-row"] {
+    grid-auto-flow: row;
+  }
+  [grid~="flow-col"] {
+    grid-auto-flow: column;
+  }
+  [grid~="flow-row-dense"] {
+    grid-auto-flow: row dense;
+  }
+  [grid~="cols-1"] {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+  [grid~="cols-none"] {
+    grid-template-columns: none;
+  }
+  [grid~="auto-cols-auto"] {
+    grid-auto-columns: auto;
+  }
+  [grid~="auto-cols-min"] {
+    grid-auto-columns: -webkit-min-content;
+    grid-auto-columns: min-content;
+  }
+  [grid~="auto-cols-max"] {
+    grid-auto-columns: -webkit-max-content;
+    grid-auto-columns: max-content;
+  }
+  [grid~="col-auto"] {
+    grid-column: auto;
+  }
+  [grid~="col-span-2"] {
+    -ms-grid-column-span: span 2 / span 2;
+    grid-column: span 2 / span 2;
+  }
+  [grid~="rows-3"] {
+    grid-template-rows: repeat(3, minmax(0, 1fr));
+  }
+  [grid~="rows-none"] {
+    grid-template-rows: none;
+  }
+  [grid~="auto-rows-auto"] {
+    grid-auto-rows: auto;
+  }
+  [grid~="auto-rows-min"] {
+    grid-auto-rows: -webkit-min-content;
+    grid-auto-rows: min-content;
+  }
+  [grid~="auto-rows-max"] {
+    grid-auto-rows: -webkit-max-content;
+    grid-auto-rows: max-content;
+  }
+  [grid~="row-auto"] {
+    grid-row: auto;
+  }
+  [grid~="row-span-2"] {
+    -ms-grid-row-span: span 2 / span 2;
+    grid-row: span 2 / span 2;
+  }
 Tools / with negative utility / css / 0: |-
   [m~="-x-4"] {
     margin-left: -1rem;
