--- a/test/processor/__snapshots__/attributify.test.ts.yml
+++ b/test/processor/__snapshots__/attributify.test.ts.yml
@@ -68,6 +68,40 @@ Tools / simple attributify / css / 0: |-
       padding: 1rem;
     }
   }
+Tools / with align utility / css / 0: |-
+  [align~="items-start"] {
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    -webkit-align-items: flex-start;
+    align-items: flex-start;
+  }
+  [align~="items-center"] {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  [align~="content-center"] {
+    -ms-flex-line-pack: center;
+    -webkit-align-content: center;
+    align-content: center;
+  }
+  [align~="content-end"] {
+    -ms-flex-line-pack: end;
+    -webkit-align-content: flex-end;
+    align-content: flex-end;
+  }
+  [align~="self-auto"] {
+    -ms-flex-item-align: auto;
+    -ms-grid-row-align: auto;
+    -webkit-align-self: auto;
+    align-self: auto;
+  }
+  [align~="self-end"] {
+    -ms-flex-item-align: end;
+    -webkit-align-self: flex-end;
+    align-self: flex-end;
+  }
 Tools / with grid utility / css / 0: |-
   [grid~="default"] {
     display: -ms-grid;
