--- a/test/processor/__snapshots__/attributify.test.ts.yml
+++ b/test/processor/__snapshots__/attributify.test.ts.yml
@@ -102,6 +102,39 @@ Tools / with align utility / css / 0: |-
     -webkit-align-self: flex-end;
     align-self: flex-end;
   }
+Tools / with display utility / css / 0: |-
+  [display~="block"] {
+    display: block;
+  }
+  [display~="inline-block"] {
+    display: inline-block;
+  }
+  [display~="inline"] {
+    display: inline;
+  }
+  [display~="flow-root"] {
+    display: flow-root;
+  }
+  [display~="contents"] {
+    display: contents;
+  }
+  [display~="list-item"] {
+    display: list-item;
+  }
+  [display~="hidden"] {
+    display: none;
+  }
+  [display~="visible"] {
+    visibility: visible;
+  }
+  [display~="invisible"] {
+    visibility: hidden;
+  }
+  @media (min-width: 768px) {
+    [display~="md:hidden"] {
+      display: none;
+    }
+  }
 Tools / with gradient utility / css / 0: |-
   [gradient~="none"] {
     background-image: none;
