--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -17,12 +17,14 @@ Tools / get corePlugins / list / 0: |-
     "backgroundPosition",
     "backgroundRepeat",
     "backgroundSize",
+    "backgroundOrigin",
     "borderCollapse",
     "borderColor",
     "borderOpacity",
     "borderRadius",
     "borderStyle",
     "borderWidth",
+    "boxDecorationBreak",
     "boxSizing",
     "cursor",
     "display",
@@ -96,6 +98,7 @@ Tools / get corePlugins / list / 0: |-
     "wordBreak",
     "width",
     "zIndex",
+    "isolation",
     "gap",
     "gridAutoFlow",
     "gridTemplateColumns",
@@ -119,7 +122,29 @@ Tools / get corePlugins / list / 0: |-
     "transitionDuration",
     "transitionDelay",
     "keyframes",
-    "animation"
+    "animation",
+    "mixBlendMode",
+    "backgroundBlendMode",
+    "filter",
+    "blur",
+    "brightness",
+    "contrast",
+    "dropShadow",
+    "grayscale",
+    "hueRotate",
+    "invert",
+    "saturate",
+    "sepia",
+    "backdropFilter",
+    "backdropBlur",
+    "backdropBrightness",
+    "backdropContrast",
+    "backdropGrayscale",
+    "backdropHueRotate",
+    "backdropInvert",
+    "backdropOpacity",
+    "backdropSaturate",
+    "backdropSepia"
   ]
 Tools / get corePlugins / list2 / 1: |-
   [
@@ -144,12 +169,14 @@ Tools / get corePlugins / list3 / 2: |-
     "backgroundPosition",
     "backgroundRepeat",
     "backgroundSize",
+    "backgroundOrigin",
     "borderCollapse",
     "borderColor",
     "borderOpacity",
     "borderRadius",
     "borderStyle",
     "borderWidth",
+    "boxDecorationBreak",
     "boxSizing",
     "display",
     "flexDirection",
@@ -222,6 +249,7 @@ Tools / get corePlugins / list3 / 2: |-
     "wordBreak",
     "width",
     "zIndex",
+    "isolation",
     "gap",
     "gridAutoFlow",
     "gridTemplateColumns",
@@ -245,5 +273,27 @@ Tools / get corePlugins / list3 / 2: |-
     "transitionDuration",
     "transitionDelay",
     "keyframes",
-    "animation"
+    "animation",
+    "mixBlendMode",
+    "backgroundBlendMode",
+    "filter",
+    "blur",
+    "brightness",
+    "contrast",
+    "dropShadow",
+    "grayscale",
+    "hueRotate",
+    "invert",
+    "saturate",
+    "sepia",
+    "backdropFilter",
+    "backdropBlur",
+    "backdropBrightness",
+    "backdropContrast",
+    "backdropGrayscale",
+    "backdropHueRotate",
+    "backdropInvert",
+    "backdropOpacity",
+    "backdropSaturate",
+    "backdropSepia"
   ]
