--- a/test/processor/__snapshots__/attributify.test.ts.yml
+++ b/test/processor/__snapshots__/attributify.test.ts.yml
@@ -267,7 +267,7 @@ Tools / with grid utility / css / 0: |-
     -ms-grid-row-span: span 2 / span 2;
     grid-row: span 2 / span 2;
   }
-Tools / with isolation / css / 0: |-
+Tools / with isolation utility / css / 0: |-
   [isolation~="isolate"] {
     isolation: isolate;
   }
@@ -366,6 +366,43 @@ Tools / with position utility / css / 0: |-
   }
   [position~="-left-3/4"] {
     left: -75%;
+  }
+Tools / with table utility / css / 0: |-
+  [table~="default"] {
+    display: table;
+  }
+  [table~="inline"] {
+    display: inline-table;
+  }
+  [table~="caption"] {
+    display: table-caption;
+  }
+  [table~="cell"] {
+    display: table-cell;
+  }
+  [table~="column"] {
+    display: table-column;
+  }
+  [table~="column-group"] {
+    display: table-column-group;
+  }
+  [table~="footer-group"] {
+    display: table-footer-group;
+  }
+  [table~="header-group"] {
+    display: table-header-group;
+  }
+  [table~="row-group"] {
+    display: table-row-group;
+  }
+  [table~="row"] {
+    display: table-row;
+  }
+  [table~="auto"] {
+    table-layout: auto;
+  }
+  [table~="fixed"] {
+    table-layout: fixed;
   }
 Tools / with variants / css / 0: |-
   @media (min-width: 640px) {
